[metadata]
name = pynta-flow
version = attr: pynta.__version__
description = An automated workflow for reaction path exploration on metallic surfaces
long_description = file: README.md, LICENSE.md
long_description_content_type=text/markdown

url = https://zadorlab.github.io/pynta
project_urls =
    Source = https://github.com/zadorlab/pynta.git
    Documentation = https://zadorlab.github.io/pynta

author = Maciej Gierada, Eric D. Hermes, David H. Bross
author_email = maciek.gierada@gmail.com
license = GPL-3.0
keywords = surface, catalysis, chemistry, physics, hpc, workflow, automation
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
packages=pynta
    pynta.pytemplate
    pynta.jobtemplate
    pynta.excatkit
    pynta.license
setup_requires =
    setuptools>=39.2
python_requires = >=3.6